Added png sprites

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -2,6 +2,7 @@
 @import ./common/fonts
 @import "../../../node_modules/normalize.css/normalize"
 @import ./common/sprite
+@import ./common/spritepng
 @import ./components/header
 @import ./components/footer
 
