--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -27,6 +27,12 @@
     <div class="icon-enable-webcam"></div>
     <div class="icon-edit-button"></div>
 
+    <hr>
+
+    <div class="icon-png-model2"></div>
+    <div class="icon-png-smile"></div>
+    <div class="icon-png-online"></div>
+
     <img src="assets/images/pictures/380351-PCW7EE-253.jpg" alt="img">
 
         
