Added inline-block styles for all html i tags start with icon-

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -6,6 +6,10 @@
 @import ./components/header
 @import ./components/footer
 
+
+i[class^="icon-"]
+    display: inline-block
+
 body
     font-size: 14px
     background-color: pink
