--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -16,22 +16,22 @@
 
     <i class="svg-001-facebook-letter-logo"></i> 
 
-    <div class="icon-left-arrow"></div>
-    <div class="icon-circle-small"></div>
-    <div class="icon-logo"></div>
-    <div class="icon-question"></div>
-    <div class="icon-take-photo-face"></div>
-    <div class="icon-triangle"></div>
-    <div class="icon-twitter"></div>
-    <div class="icon-close-card"></div>
-    <div class="icon-enable-webcam"></div>
-    <div class="icon-edit-button"></div>
+    <i class="icon-left-arrow"></i>
+    <i class="icon-circle-small"></i>
+    <i class="icon-logo"></i>
+    <i class="icon-question"></i>
+    <i class="icon-take-photo-face"></i>
+    <i class="icon-triangle"></i>
+    <i class="icon-twitter"></i>
+    <i class="icon-close-card"></i>
+    <i class="icon-enable-webcam"></i>
+    <i class="icon-edit-button"></i>
 
     <hr>
 
-    <div class="icon-png-model2"></div>
-    <div class="icon-png-smile"></div>
-    <div class="icon-png-online"></div>
+    <i class="icon-png-model2"></i>
+    <i class="icon-png-smile"></i>
+    <i class="icon-png-online"></i>
 
     <img src="assets/images/pictures/380351-PCW7EE-253.jpg" alt="img">
 
