--- a/src/views/pages/base/base.twig
+++ b/src/views/pages/base/base.twig
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="description" content="A demo of how to use gulp-twig"/>
-    <meta name="author" content="Simon de Turck"/>
+    <meta name="description" content="Boilerplate gulp-4"/>
+    <meta name="author" content="ramagenoisia@gmail.com"/>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon/favicon.ico">
 
     <link rel="stylesheet" href="assets/styles/main.min.css">
  
