Adding symbol mode to svg sprites

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -1,35 +1,19 @@
 @import ./common/mixins
 @import ./common/fonts
 @import "../../../node_modules/normalize.css/normalize"
-@import ./common/sprite
+// @import ./common/sprite
 @import ./common/spritepng
 @import ./components/header
 @import ./components/footer
 
-
+svg[class^="svg-"],
 i[class^="icon-"]
     display: inline-block
+svg[class^="svg-"]
+    width: 100%
+    height: 100%
 
 body
     font-size: 14px
     background-color: pink
     +mb
-    +r(1920)
-        padding: 20%
-
-.anim
-    width: 100px
-    height: 100px
-    background: #333
-
-img
-    max-width: 100%
-
-@media (max-width: 1920px)
-    body
-        background: green
-
-
-@media (max-width: 1920px)
-    body
-        line-height: 2
