--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -11,14 +11,33 @@
 <main class="page-content">
 
     <h1>This is index.twig</h1>
-
+{# 
     <div class="anim"></div>
 
-    <i class="svg-001-facebook-letter-logo"></i> 
+    <i class="svg-001-facebook-letter-logo"></i>  #}
 
-    <i class="icon-left-arrow"></i>
-    <i class="icon-circle-small"></i>
-    <i class="icon-logo"></i>
+    <i class="icon-twitter"></i>
+    <i class="icon-triangle"></i>
+    <i class="icon-edit-button"></i>
+    <svg class="svg-edit-button-icon">
+        <use xlink:href="#edit-button"></use>
+    </svg>
+    <svg class="svg-twitter-icon">
+        <use xlink:href="#twitter"/>
+    </svg>
+    <svg class="svg-triangle-icon">
+        <use xlink:href="#triangle"/>
+    </svg>
+    <svg class="svg-inventoryblue-icon">
+        <use xlink:href="#inventoryblue"/>
+    </svg>
+    <svg class="svg-_labcase-white-icon">
+        <use xlink:href="#_labcase-white"/>
+    </svg>
+    <svg class="svg-labcase-icon">
+        <use xlink:href="#labcase"/>
+    </svg>
+    {# <i class="icon-logo"></i>
     <i class="icon-question"></i>
     <i class="icon-take-photo-face"></i>
     <i class="icon-triangle"></i>
@@ -33,7 +52,7 @@
     <i class="icon-png-smile"></i>
     <i class="icon-png-online"></i>
 
-    <img src="assets/images/pictures/380351-PCW7EE-253.jpg" alt="img">
+    <img src="assets/images/pictures/380351-PCW7EE-253.jpg" alt="img"> #}
 
         
 </main>
