add svg4everybody plugin

--- a/src/views/pages/index.twig
+++ b/src/views/pages/index.twig
@@ -20,22 +20,22 @@
     <i class="icon-triangle"></i>
     <i class="icon-edit-button"></i>
     <svg class="svg-edit-button-icon">
-        <use xlink:href="#edit-button"></use>
+        <use xlink:href="assets/images/svgicons/sprite.svg#edit-button"></use>
     </svg>
     <svg class="svg-twitter-icon">
-        <use xlink:href="#twitter"/>
+        <use xlink:href="assets/images/svgicons/sprite.svg#twitter"/>
     </svg>
     <svg class="svg-triangle-icon">
-        <use xlink:href="#triangle"/>
+        <use xlink:href="assets/images/svgicons/sprite.svg#triangle"/>
     </svg>
     <svg class="svg-inventoryblue-icon">
-        <use xlink:href="#inventoryblue"/>
+        <use xlink:href="assets/images/svgicons/sprite.svg#inventoryblue"/>
     </svg>
     <svg class="svg-_labcase-white-icon">
-        <use xlink:href="#_labcase-white"/>
+        <use xlink:href="assets/images/svgicons/sprite.svg#_labcase-white"/>
     </svg>
     <svg class="svg-labcase-icon">
-        <use xlink:href="#labcase"/>
+        <use xlink:href="assets/images/svgicons/sprite.svg#labcase"/>
     </svg>
     {# <i class="icon-logo"></i>
     <i class="icon-question"></i>
