fix components structure

--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -17,3 +17,10 @@ body
     font-size: 14px
     background-color: pink
     +mb
+
+#video
+    width: 500px
+    height: 400px
+    background: #ffffff
+    margin: 50px auto
+    display: block
