--- a/src/views/pages/components/header.twig
+++ b/src/views/pages/components/header.twig
@@ -16,7 +16,7 @@
 
 <header class="page-header">
 
-    <h2>This is header component</h2>
+    <h2>header</h2>
 
     <ul>
         {% for value in menuLinks %}
